# yokai

./: LICENSE  README.md  pyproject.toml
docs/: architecture.md  writing_an_adapter.md
examples/: enterprise_data_center.yaml  example_plugin.py  minimal.yaml
src/yokai/: __init__.py  cli.py  factory.py
src/yokai/adapters/bitbucket_dc/: __init__.py  hosting.py
src/yokai/adapters/claude_code/: __init__.py  agent.py
src/yokai/adapters/jira_dc/: __init__.py  tracker.py
src/yokai/core/: branch_naming.py  concurrency.py  config.py  exceptions.py  formatters.py  hooks.py  interfaces.py  logging_setup.py  models.py  pipeline.py  prompts.py  routers.py
src/yokai/plugins/: logger_sink.py  slack_sink.py
src/yokai/storage/: memory_store.py  sqlite_store.py
tests/integration/: test_bitbucket_git.py
tests/unit/: fakes.py  test_bitbucket_dc_hosting.py  test_branch_naming.py  test_cli.py  test_concurrency.py  test_config.py  test_factory.py  test_formatters.py  test_hooks.py  test_jira_dc_tracker.py  test_logging_setup.py  test_models.py  test_pipeline.py  test_pipeline_integration.py  test_public_api.py  test_routers.py  test_storage.py
